fixed button on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -216,6 +216,11 @@ html {
   box-sizing: border-box;
   font-size: 62.5%;
 }
+.home {
+  /* Style the submit button with a specific background color etc */
+  /* When moving the mouse over the submit button, add a darker green color */
+  /* Add a background color and some padding around the form */
+}
 .home .intro img {
   padding-top: 16.2%;
 }
@@ -289,6 +294,10 @@ html {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+.home .walk .walk-text .btn {
+  display: flex;
+  justify-content: center;
+}
 .home .walk .walk-text .btn button {
   background-color: #1f2535;
   border-radius: 4px;
@@ -296,6 +305,7 @@ html {
   padding: 3%;
   width: 150px;
   font-size: 2.3rem;
+  border: none;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -360,17 +370,17 @@ html {
     width: 470px;
   }
 }
-#sectiontitle {
+.home #sectiontitle {
   font-size: 2.5rem;
   margin-bottom: 2%;
 }
-#sectiontitle div {
+.home #sectiontitle div {
   display: flex;
   justify-content: center;
 }
-input[type="text"],
-select,
-textarea {
+.home input[type="text"],
+.home select,
+.home textarea {
   width: 100%;
   /* Full width */
   padding: 12px;
@@ -388,67 +398,64 @@ textarea {
   resize: vertical;
   /* Allow the user to vertically resize the textarea (not horizontally) */
 }
-/* Style the submit button with a specific background color etc */
-input[type="submit"] {
+.home input[type="submit"] {
   padding: 12px 20px;
   border-radius: 4px;
   cursor: pointer;
   color: black;
 }
-/* When moving the mouse over the submit button, add a darker green color */
-input[type="submit"]:hover {
+.home input[type="submit"]:hover {
   background-color: black;
   color: white;
 }
-/* Add a background color and some padding around the form */
-.container3 {
+.home .container3 {
   border-radius: 5px;
   background-color: whitesmoke;
   padding: 30px;
 }
-.mainform {
+.home .mainform {
   width: 500px;
   margin-bottom: 2%;
 }
-.contact {
+.home .contact {
   display: flex;
   justify-content: center;
 }
-.about header {
+.home .about header {
   flex-direction: column;
   align-items: center;
   display: flex;
   justify-content: center;
   border-bottom: 1px solid lightgrey;
 }
-.about header img {
+.home .about header img {
   margin-top: 13%;
   width: 800px;
   height: 200px;
 }
-.about header h1 {
+.home .about header h1 {
   margin-top: 3%;
   font-size: 3rem;
   margin-bottom: 3%;
 }
-.about .threepiece {
+.home .about .threepiece {
   display: flex;
   justify-content: space-evenly;
   margin-left: 6%;
   margin-right: 6%;
   margin-top: 2%;
 }
-.about .threepiece div {
+.home .about .threepiece div {
   width: 27%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.about .threepiece div h2 {
+.home .about .threepiece div h2 {
   font-size: 2rem;
   margin-bottom: 2%;
 }
-.about .threepiece div img {
+.home .about .threepiece div img {
   width: 250px;
   height: 250px;
   border-radius: 8px;
